--- a/workspace/dashboard/templates/dashboard/index.html
+++ b/workspace/dashboard/templates/dashboard/index.html
@@ -1,5 +1,5 @@
 {% extends 'base_with_navbar.html' %}
-{% load file_filters %}
+{% load ui_filters %}
 
 {% block title %}Dashboard - Workspace{% endblock %}
 {% block body_class %}bg-base-100 min-h-screen flex flex-col{% endblock %}
