--- a/workspace/files/ui/templates/files/ui/partials/folder_content.html
+++ b/workspace/files/ui/templates/files/ui/partials/folder_content.html
@@ -1,4 +1,4 @@
-{% load file_filters %}
+{% load file_filters ui_filters %}
 {% comment %}
   Folder content component - displays files and folders in a table
 
