--- a/workspace/files/ui/templates/files/ui/partials/folder_content_mosaic.html
+++ b/workspace/files/ui/templates/files/ui/partials/folder_content_mosaic.html
@@ -1,4 +1,4 @@
-{% load file_filters %}
+{% load file_filters ui_filters %}
 {% comment %}
   Folder content mosaic/grid view - displays files and folders as cards in a grid
 
